--- a/web/museum.html
+++ b/web/museum.html
@@ -81,7 +81,7 @@
       text-align: left; /* 文本左对齐 */
   }
   .background4 {
-      background-image: url('/Users/qinshuorong/Desktop/qsr725/image/museum3.jpg'); /* 替换为实际图片路径 */
+      background-image: url('../image/museum3.jpg'); /* 替换为实际图片路径 */
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -103,8 +103,8 @@
 
 <!-- 顶部菜单栏 -->
 <div class="navbar">
-    <a href="/Users/qinshuorong/Desktop/qsr725/index.html">首页</a>
-    <a href="/Users/qinshuorong/Desktop/qsr725/web/city.html">欧洲城市风光</a>
+    <a href="../index.html">首页</a>
+    <a href="city.html">欧洲城市风光</a>
     <a href="/Users/qinshuorong/Desktop/qsr725/web/nature.html">欧洲自然风光</a>
     <a href="/Users/qinshuorong/Desktop/qsr725/web/museum.html">欧洲博物馆</a>
     <a href="/Users/qinshuorong/Desktop/qsr725/web/film.html">欧洲影视作品</a>
