Fix relative paths in top navbar links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!-- 顶部菜单栏 -->
 <div class="navbar">
   <a href="index.html">首页</a>
-  <a href="city.html">欧洲城市风光</a>
+  <a href="web/city.html">欧洲城市风光</a>
   <a href="web/nature.html">欧洲自然风光</a>
   <a href="web/museum.html">欧洲博物馆</a>
   <a href="web/film.html">欧洲影视作品</a>
