Update image paths and adjust heights in background styles

--- a/web/film.html
+++ b/web/film.html
@@ -28,11 +28,11 @@
 
   /* 背景图片样式 */
   .background1 {
-      background-image: url('/Users/qinshuorong/Desktop/qsr725/image/video1.jpg');
+      background-image: url('../image/video1.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      height: 300px;
+      height: 1000px;
       margin-top: 60px; /* 与菜单栏保持一定距离 */
       position: relative; /* 设置相对定位 */
   }
@@ -45,11 +45,11 @@
       text-align: left; /* 文本左对齐 */
   }
   .background2 {
-      background-image: url('/Users/qinshuorong/Desktop/qsr725/image/video2.jpg');
+      background-image: url('../image/video2.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      height: 300px;
+      height: 1000px;
       margin-top: 15px;
       position: relative; /* 设置相对定位 */
   }
@@ -64,11 +64,11 @@
   
   /* 新增背景图片样式 */
   .background3 {
-      background-image: url('/Users/qinshuorong/Desktop/qsr725/image/video3.jpg'); /* 替换为实际图片路径 */
+      background-image: url('../image/video3.jpg'); /* 替换为实际图片路径 */
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      height: 300px;
+      height: 1000px;
       margin-top: 15px;
       position: relative; /* 设置相对定位 */
   }
