Enhance web pages with improved styling and descriptive content

--- a/web/film.html
+++ b/web/film.html
@@ -44,6 +44,14 @@
       font-size: 30px;
       text-align: left; /* 文本左对齐 */
   }
+  .background1 h3 {
+      position: absolute; /* 设置绝对定位 */
+      top: 10px; /* 距离上边20px */
+      left: 20px; /* 距离左边20px */
+      color: white;
+      font-size: 30px;
+      text-align: left; /* 文本左对齐 */
+  }
   .background2 {
       background-image: url('../image/video2.jpg');
       background-size: cover;
@@ -96,6 +104,8 @@
 
 <!-- 第一张背景图片 -->
 <div class="background1">
+    <h3>欧洲电影以其深邃的艺术性和强烈的文化特色独树一帜。从法国新浪潮的革新到意大利新现实主义的质朴，从英国的黑色幽默到德国表现主义的深刻，欧洲电影不断探索电影语言的边界。它们不仅展现了欧洲的多元文化，也反映了社会变迁和人性思考。欧洲电影人以其精湛的技艺和对电影艺术的热爱，为世界电影史贡献了无数经典之作，影响深远。
+    </h3>
 </div>
 
 <!-- 第二张背景图片 -->
