--- a/web/museum.html
+++ b/web/museum.html
@@ -44,6 +44,14 @@
       font-size: 20px;
       text-align: left; /* 文本左对齐 */
   }
+  .background1 h3 {
+      position: absolute; /* 设置绝对定位 */
+      top: 60px; /* 距离上边20px */
+      left: 20px; /* 距离左边20px */
+      color: white;
+      font-size: 20px;
+      text-align: left; /* 文本左对齐 */
+  }
   .background2 {
       background-image: url('../image/museum4.jpg');
       background-size: cover;
@@ -115,6 +123,10 @@
 <!-- 第一张背景图片 -->
 <div class="background1">
   <p>梵高博物馆</p>
+  <h3>欧洲的博物馆是文化与历史的宝库，它们以其丰富的藏品和独特的展览方式，向世人展示着人类文明的精华。150字的描述如下：
+
+    欧洲博物馆以其深厚的历史底蕴和文化多样性著称。从卢浮宫的古典艺术到蓬皮杜中心的现代创意，每座博物馆都是一个时代的缩影。它们不仅收藏了无数珍贵的艺术品，还通过互动式展览和教育项目，让参观者能够更深入地了解和体验文化。这些博物馆不仅是知识的殿堂，也是跨文化交流的平台，让世界各地的游客都能在这里感受到艺术与历史的交融。
+    </h3>
 </div>
 
 <!-- 第二张背景图片 -->
