--- a/web/nature.html
+++ b/web/nature.html
@@ -44,6 +44,14 @@
       font-size: 20px;
       text-align: left; /* 文本左对齐 */
   }
+  .background1 h3 {
+      position: absolute; /* 设置绝对定位 */
+      top: 60px; /* 距离上边20px */
+      left: 20px; /* 距离左边20px */
+      color: white;
+      font-size: 20px;
+      text-align: left; /* 文本左对齐 */
+  }
   .background2 {
       background-image: url('../image/f2.jpg');
       background-size: cover;
@@ -113,6 +121,8 @@
 <!-- 第一张背景图片 -->
 <div class="background1">
   <p>雅典</p>
+  <h3>欧洲的自然风光如同一幅绚烂的画卷，从挪威陡峭的峡湾到瑞士阿尔卑斯山的皑皑白雪，从希腊爱琴海的碧波荡漾到法国普罗旺斯的薰衣草田，每一处都散发着独特的魅力。春天，荷兰的郁金香花海如彩带般铺满大地；夏日，冰岛的极昼带来无尽的阳光与午夜的太阳；秋天，德国的黑森林被金黄的落叶覆盖；而冬日，芬兰的北极光在夜空中舞动。欧洲的自然风光，四季变换，色彩斑斓，令人心醉神迷。
+</h3>
 </div>
 
 <!-- 第二张背景图片 -->
