--- a/web/city.html
+++ b/web/city.html
@@ -43,6 +43,14 @@
       color: white;
       font-size: 20px;
       text-align: left; /* 文本左对齐 */
+  } 
+  .background1 h3 {
+      position: absolute; /* 设置绝对定位 */
+      top: 60px; /* 距离上边20px */
+      left: 20px; /* 距离左边20px */
+      color: white;
+      font-size: 20px;
+      text-align: left; /* 文本左对齐 */
   }
   .background2 {
       background-image: url('../image/c5.jpg');
@@ -112,8 +120,9 @@
 
 <!-- 第一张背景图片 -->
 <div class="background1">
-  <p>伦敦夜色
-  </p>
+  <p>伦敦夜色</p>
+  <h3>欧洲，这片古老的大陆，孕育了无数令人心驰神往的城市风光。从巴黎的埃菲尔铁塔到罗马的斗兽场，从布拉格的查理大桥到维也纳的金色大厅，每座城市都有其独特的历史韵味和文化气息。漫步在石板铺就的街道上，哥特式建筑的尖顶与巴洛克风格的雕塑交相辉映，让人仿佛穿越回中世纪的辉煌。而现代的欧洲城市，如柏林、阿姆斯特丹，又以其独特的现代艺术和创新精神，展现出欧洲的另一面。无论是历史的沉淀还是现代的活力，欧洲的城市风光总能给旅行者留下深刻的印象。
+</h3>
 </div>
 
 <!-- 第二张背景图片 -->
