Add white background and return link to index.html

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     欧洲在历史上对世界文化、科学、政治和经济有着深远的影响，至今仍在全球事务中扮演着重要角色。
     </p>
 </div>
+<!-- 纯白背景及返回链接 -->
 
+<div style="background-color: white; height: 100px; display: flex; justify-content: center; align-items: center;">
+
+  <a href=" https://jie-ot.github.io/2407/" style="color: black; font-size: 20px;">返回寝室首页</a>
+  
+  </div>
 </body>
 </html>
